# sky.pro-pd-hw27-hw32

./: .env  .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  sample.py
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_options.py  0002_alter_category_name.py  0003_location_lat_location_lng_location_name.py  0004_alter_ad_image.py  0005_alter_ad_image.py  0006_remove_user_location_user_location.py  0007_rename_location_user_locations.py  0008_alter_ad_category_delete_category.py  0009_delete_location_alter_user_locations.py  0010_remove_user_locations.py  0011_alter_ad_author_delete_user.py  0012_alter_ad_image.py  0013_alter_ad_image.py  0014_alter_ad_name.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
fixtures/: ad.json  ads.json  categories.json  category.json  csv_to_fixtures.py  csv_to_fixtures_settings.py  csv_to_json.py  csv_to_json_settings.py  location.json  user.json
hello/: urls.py  views.py
locations/: models.py  serializers.py  urls.py  views.py
locations/migrations/: 0001_initial.py
postgres/: docker-compose.yaml
selection/: models.py  views.py
selections/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
selections/migrations/: 0001_initial.py  0002_alter_selection_name.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  (+3 more)
zavito/: asgi.py  settings.py  urls.py  wsgi.py
