[tool.poetry]
name = "sky-pro-pd-hw27-hw32"
version = "0.1.0"
description = ""
authors = ["grm <golosov_sa@mail.ru>"]
readme = "README.md"
packages = [{include = "sky"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
